# did-api

./: .env  Cargo.toml  Dockerfile
src/utils_did/: issuer.rs
