[package]
name = "did-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = {version="0.7.0"}
dotenv = "0.15.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.21"
rand = "0.8.5"
uuid = {version="1.7.0", features = ["v4"]}

identity_iota = "1.1.1"